--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:watch": "npm run test -- --watch",
     "lint": "./node_modules/.bin/eslint src",
-    "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix"
+    "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix",
+    "build": "webpack"
   },
   "repository": {
-   "type": "git",
-   "url": "git+https://github.com/visha12l/Redux_Counter.git"
+    "type": "git",
+    "url": "git+https://github.com/visha12l/Redux_Counter.git"
   },
   "author": "Vishal Shinde",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
@@ -31,11 +32,13 @@
     "jquery": "^3.5.0",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^3.1.11"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0 "
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "babel-upgrade": "^1.0.1",
     "lodash": "^4.17.13",
     "prop-types": "^15.6.1",
     "react": "16.3.2",
